--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <!-- Meta Pixel -->
   <script>
-    const PIXEL_ID = '9256821247760891';
+    const PIXEL_ID = '1391288831895635';
     !function(f,b,e,v,n,t,s){
       if(f.fbq) return; n=f.fbq=function(){n.callMethod?
         n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -88,7 +88,7 @@
       <div class="logo">
         <img src="images/logo.png" alt="Logo de Wonbet.vip" />
       </div>
-      <h1 class="title">200% EXTRA EN TU CARGA</h1>
+      <h1 class="title">30% EXTRA EN TU CARGA</h1>
       <p class="subtitle">
         <span class="fire">🔥</span>
         ESCRIBÍ TU NOMBRE Y CREA TU USUARIO
@@ -199,7 +199,7 @@ window.addEventListener('load', async () => {
     {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ subdomain: 'clubm', fbc, fbp })
+      body: JSON.stringify({ subdomain: 'lorewb', fbc, fbp })
     }
   );
   if (!resp.ok) throw new Error(`LineManager error: ${resp.status}`);
