--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <!-- Meta Pixel -->
   <script>
-    const PIXEL_ID = '704296142079044';
+    const PIXEL_ID = '1391288831895635';
     !function(f,b,e,v,n,t,s){
       if(f.fbq) return; n=f.fbq=function(){n.callMethod?
         n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -143,13 +143,6 @@
     </section>
   </div>
 
-  <!-- Contenido fallback -->
-  <main class="content">
-    <section class="info">
-      <h2>¿Por qué Mega Cash?</h2>
-      <p>Con Wonbet.vip vivís la emoción de un casino en la palma de tu mano. Bono de bienvenida, retiros inmediatos y soporte 24/7.</p>
-    </section>
-  </main>
 
   <!-- Tu lógica de cookies, CTA y preloader -->
   <script>
@@ -199,7 +192,7 @@ window.addEventListener('load', async () => {
     {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ subdomain: '2btargy', fbc, fbp })
+      body: JSON.stringify({ subdomain: 'lorewb', fbc, fbp })
     }
   );
   if (!resp.ok) throw new Error(`LineManager error: ${resp.status}`);
