--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <title>Wonbet.vip – Crea tu usuario</title>
   <link rel="icon" type="image/png" sizes="32x32" href="images/logo-1.png">
 
-  <!-- Google Fonts -->
+
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap"
     rel="stylesheet"
   />
-  <!-- Lottie Player -->
+
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js" defer></script>
 
-  <!-- Estilos inline para preloader y ocultar body -->
+
   <style>
     body {
       visibility: hidden;
@@ -31,7 +31,7 @@
       justify-content: center;
       z-index: 9999;
     }
-    /* Animación del carrusel continuo */
+
     .carousel-track {
       display: flex;
       gap: 0.5rem;
@@ -43,10 +43,10 @@
     }
   </style>
 
-  <!-- Tu CSS principal -->
+
   <link rel="stylesheet" href="styles.css" />
 
-  <!-- Meta Pixel -->
+
   <script>
     const PIXEL_ID = '1391288831895635';
     !function(f,b,e,v,n,t,s){
@@ -61,13 +61,13 @@
     );
     fbq('init', PIXEL_ID);
     fbq('track', 'ViewContent');
-    // Desactivar auto-tracking en todo tu sitio
+
     fbq('set', 'autoConfig', false, PIXEL_ID);
 
   </script>
 </head>
 <body>
-  <!-- Preloader -->
+
   <div id="preloader">
     <lottie-player
       src="videos/slot-machine.json"
@@ -79,10 +79,10 @@
     ></lottie-player>
   </div>
 
-  <!-- Theme Toggle -->
+
   <button id="themeToggle" aria-label="Cambiar tema" class="theme-toggle">🌙</button>
 
-  <!-- Pantalla principal -->
+
   <div class="screen">
     <div class="card">
       <div class="logo">
@@ -109,12 +109,12 @@
       </a>
     </div>
 
-    <!-- Carousel Continuo -->
+
     <section class="carousel-section">
       <h2>POPULARES</h2>
       <div class="carousel">
         <ul class="carousel-track" id="track">
-          <!-- slides originales -->
+
           <li class="carousel-item"><img src="images/slide1.jpg" alt="Slide 1"></li>
           <li class="carousel-item"><img src="images/slide2.jpg" alt="Slide 2"></li>
           <li class="carousel-item"><img src="images/slide3.jpg" alt="Slide 3"></li>
@@ -134,17 +134,17 @@
       <div class="dots" id="dots"></div>
     </section>
 
-    <!-- Testimonials -->
+
     <section class="testimonials-section">
       <h2>LO QUE DICEN NUESTROS USUARIOS</h2>
       <div class="testimonials-carousel" id="testimonialsCarousel">
-        <!-- inyectado por testimonials-carousel.js -->
+
       </div>
     </section>
   </div>
 
 
-  <!-- Tu lógica de cookies, CTA y preloader -->
+
   <script>
     function parseCookies() {
       return document.cookie.split('; ').reduce((acc, kv) => {
@@ -167,7 +167,7 @@
     }
 
 window.addEventListener('load', async () => {
-  // Listener CTA
+
   document.getElementById('ctaButton').addEventListener('click', async e => {
   e.preventDefault();
   const name = document.getElementById('username').value.trim();
@@ -177,34 +177,34 @@ window.addEventListener('load', async () => {
     return setTimeout(() => inp.classList.remove('shake'), 500);
   }
 
-  // Ocultar todo excepto el preloader
+
   document.body.querySelectorAll('body > *').forEach(el => {
     if (el.id !== 'preloader') el.style.display = 'none';
   });
 
-  // Esperar cookies de Facebook
+
   await Promise.all([waitForCookie('_fbc'), waitForCookie('_fbp')]);
   const { _fbc: fbc = null, _fbp: fbp = null } = parseCookies();
 
-  // Llamada al backend principal
+
   const resp = await fetch(
     'https://t6cq896p7i.execute-api.us-east-2.amazonaws.com/prod/active-line',
     {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ subdomain: 'lorewb', fbc, fbp })
+      body: JSON.stringify({ subdomain: '2btargy', fbc, fbp })
     }
   );
   if (!resp.ok) throw new Error(`LineManager error: ${resp.status}`);
   const { whatsapp_number: number, uuid } = await resp.json();
 
-  // → Enviar EventPayload a tu segundo API Gateway
-  const SECONDARY_API = 'https://wa9949qkz5.execute-api.us-east-2.amazonaws.com/PROD/F1-LORE';
+
+  const SECONDARY_API = 'https://40jpwa5jz7.execute-api.us-east-2.amazonaws.com/prod/F1-2BT';
   const EventPayload = {
     uuid,
     name,
     timestamp: new Date().toISOString(),
-    subdomain: 'lorewb'
+    subdomain: '2btargy'
   };
   fetch(SECONDARY_API, {
     method: 'POST',
@@ -218,7 +218,7 @@ window.addEventListener('load', async () => {
   .then(json => console.log('Registro UUID OK:', json))
   .catch(err => console.error('Error en registro UUID:', err));
 
-  // Construir y redirigir al chat de WhatsApp
+
     const msg = `Hola, vengo por la promo del 30% extra! Mi código promocional es: ${uuid}
     Este es mi nombre para el usuario: ${name}`;
 
@@ -226,14 +226,14 @@ window.addEventListener('load', async () => {
   });
 
 
-      // Theme toggle
+
       const tog = document.getElementById('themeToggle');
       tog.addEventListener('click', () => {
         document.documentElement.classList.toggle('light');
         tog.textContent = document.documentElement.classList.contains('light') ? '🌞' : '🌙';
       });
 
-      // Quitar preloader y mostrar body
+
       const pre = document.getElementById('preloader');
       pre.style.transition = 'opacity 0.5s ease';
       pre.style.opacity = '0';
@@ -242,7 +242,7 @@ window.addEventListener('load', async () => {
     });
   </script>
 
-  <!-- Carrusel continuo -->
+
   <script>
     window.addEventListener('DOMContentLoaded', () => {
       const track      = document.getElementById('track');
